ingress_class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: cloudflare
spec:
    controller: cloudflare.ar2ro.io/ingress-controller
