ingress_class_2.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: cloudflare-stuff
spec:
    controller: cloudflare.ar2ro.io/ingress-controller
