ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: cloudflare-radarr
    namespace: plex
spec:
    ingressClassName: cloudflare
    rules:
    - host: testing.ar2ro.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: radarr
               port:
                 number: 7878
